add about-project content

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "description": "",
   "devDependencies": {
     "gulp-cssmin": "^0.2.0",
-    "gulp-group-css-media-queries": "^1.2.2"
+    "gulp-group-css-media-queries": "^1.2.2",
+    "gulp-js-import": "^1.0.6"
   }
 }
